test/fixtures/render_basic_snapshot_nonumber.txt
# title                 
                        
foo                     
bar 日本語 編集         
baz                     
~                       
~                       
-- NORMAL -- t1/1 w 1:1 